# BitSquiggles

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SPEC.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy-pages.yml  verify-generated-gallery.yml
c/: Makefile  README.md  bitsquiggle32.c  bitsquiggle32.h  test_bitsquiggle32.c
dart/: README.md  bitsquiggle32.dart  bitsquiggles_renderer_flutter.dart  test_bitsquiggle32.dart
fixtures/: v1.json
java/: README.md  module-info.java
java/bit32vis/: Bit32Vis.java  Bit32VisTest.java  DemoApp.java  GalleryGenerator.java  WebFixtureGenerator.java
java/bitsquiggles/: BitSquiggle32Renderer.java  BitSquiggle32Test.java  BitSquigglesDemo.java  BitSquigglesSwingRenderer.java  ConformanceFixtureGenerator.java  (+2 more)
micropython/: README.md  bit32vis.py  bitsquiggle32.py  bitsquiggle32_renderer_framebuffer.py  bitsquiggles_renderer_lvgl.py  bitsquiggles_renderer_pyqt6.py  test_bit32vis.py  test_bitsquiggle32.py  test_bitsquiggles_renderer_pyqt6.py
spec/: 01-overview.md  02-encoding.md  03-presentation.md  04-exact-raster.md  05-smooth-output.md  06-api.md  07-conformance.md
web/: README.md  bit32vis.js  bit32vis.test.mjs  bitsquiggle32-renderer-canvas.d.ts  bitsquiggle32-renderer-canvas.js  bitsquiggle32-renderer.d.ts  bitsquiggle32-renderer.js  bitsquiggle32.d.ts  bitsquiggle32.js  bitsquiggle32.test.mjs  bitsquiggles-canvas-renderer.d.ts  bitsquiggles-canvas-renderer.js  fixtures.json  index.html  package.json  playground.js  playground.test.mjs  styles.css
(+9 files in other folders)
